# afs_fastapi

./: .agent_config.py  .env.example  .gitignore  .pre-commit-config.yaml  .token-sage-env  AFS_Equipment_Support.md  AGENTS.md  AGENT_ENFORCEMENT_PACKAGE.py  AGENT_ENFORCEMENT_SYSTEM.md  AGENT_OPTIMIZATION.md  API_MODERNIZATION_SUMMARY.md  CHANGELOG.md  CHANGELOG.md 2.bak  CHANGELOG.md 3.bak  CHANGELOG.md 4.bak  CHANGELOG.md.bak  CLAUDE.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  DEPLOY.sh  DEVELOPER_NOTES.md  DOCUMENTATION_RECOMMENDATIONS.md  FUTURE_ENHANCEMENTS.md  GEMINI.md  Gemfile  INSTALLATION.md  KIS_DIRECTIVE.md  KNOWN_ISSUES.md  MIGRATION_REPORT.md  Makefile  PAUSE_STRUCTURE_SPECIFICATION.md  PRIORITY_2_2_COMPLETION_SUMMARY.md  PROJECT_INTEGRATION_GUIDE.md  PROPOSED_TODOWRITE_IMPLEMENTATION.md  QUICK_DEPLOY.py  README.md  RED_GREEN_REFACTOR_ABSOLUTE_ENFORCEMENT.md  SECURITY_PROTOCOL.md  SESSION_STATE_DOCS_UPDATE.md  SESSION_SUMMARY.md  (+44 more)
.claude/: .agent_registry.json  checkpoints.json  optimization_integration.json  optimization_monitoring.json  pause_context_pause_6.md  pause_context_pause_7.md  pause_context_pause_8.md  pause_points.json  phase_todos.json  session_optimization_tracking.json  settings.json  strategic_todos.json  todo_sync_state.json  todos.json
.claude/commands/: formatall.md  loadsession.md  runtests-brief.md
.claude/context/: essential.md  session_state.json
.claude/hooks/: changelog_enforcement.py  session_initialization.py  tdd_enforcement.py
.github/: copilot-instructions.md
.github/workflows/: afs-testing.yml  ci.yml
.zencoder/rules/: repo.md
ToDoWrite/: todos.db
afs_fastapi/: __init__.py  main.py  version.py
afs_fastapi/api/: ai_processing_schemas.py  main.py
afs_fastapi/core/: __init__.py  can_frame_codec.py  can_hal.py  can_manager.py  can_parser.py  conversation_manager.py  enhanced_can_validator.py  j1939_parser.py  j1939_specs.py  platform_detection.py  todowrite_config.py  todowrite_integration.py  todowrite_mock.py
afs_fastapi/database/: __init__.py  agricultural_archiving.py  agricultural_schemas.py  agricultural_schemas_async.py  async_repository.py  can_data_retention.py  can_message_buffer.py  can_time_series_schema.py  can_time_series_storage.py  connection_pool.py  enhanced_time_series_storage.py  optimized_db_config.py
afs_fastapi/equipment/: adaptive_bandwidth_management.py  agricultural_can_protocols.py  can_bus.py  can_bus_manager.py  can_error_handling.py  can_message_handler.py  congestion_detection.py  critical_tractor_data_handlers.py  farm_tractors.py  message_queue_optimization.py  physical_can_interface.py  socketcan_linux.py
afs_fastapi/models/: __init__.py  fleet_messages.py
afs_fastapi/monitoring/: async_token_usage_logger.py  enhanced_token_usage_logger.py  soil_monitor.py  token_usage_logger.py  token_usage_models.py  token_usage_repository.py  token_usage_schemas.py  water_monitor.py
afs_fastapi/protocols/: __init__.py  isobus_handlers.py  sae_j1939.py
afs_fastapi/safety/: iso25119.py
afs_fastapi/services/: agricultural_ai_integration.py  ai_processing_manager.py  ai_processing_pipeline.py  cloud_integration.py  collision_avoidance_system.py  communication_loss_failsafe.py  crdt_manager.py  emergency_stop_propagation.py  field_allocation.py  fleet.py  realtime_token_optimizer.py
afs_fastapi/stations/: __init__.py  station_types.py
afs_fastapi/todos/: README.md  __init__.py  database.py  manager.py  todos.db  todos.json
cloudformation/: initial_infrastructure.yaml
commands/: CMD-CANLATENCY.sh
docs/: AUTOMATIC_TOKEN_SAGE_LOADING.md  CAN_ISOBUS_USAGE_GUIDE.md  DATABASE_SCHEMA_REFERENCE.md  EXECUTION_ORDER.md  README.md  SESSION_MANAGEMENT_STRATEGY.md  TODO_SYSTEM.md  async_database_implementation.md  documentation_plan.md  index.html
docs/commands/: fulltest.md  savesession.md
docs/database/: DATABASE_ARCHITECTURE_OPTIMIZATION.md
docs/development_environment/: code_quality.md  pre_commit_hooks.md
docs/implementation/: TDD_FRAMEWORK_MANDATORY.md  TESTING_METHODOLOGY_GUIDE.md  TOKEN_SAGE_AUTOMATIC_INTEGRATION.md
docs/isoExport_csv/: AEF Functionalities.csv  AEF Functionality Options.csv  Global NAME Functions.csv  Global Source Addresses.csv  IG Specific NAME Function.csv  IG1 Source Addresses.csv  IG2 Source Addresses.csv  IG3 Source Addresses.csv  IG4 Source Addresses.csv  IG5 Source Addresses.csv  Industry Groups.csv  Manufacturer IDs.csv
docs/monitoring/: COMPLETE_SESSION_AUDIT.md  ERROR_MONITORING_SOLUTIONS.md  FINAL_CHANGE_SUMMARY.md  FULL_TEST_SUITE_REPORT.md  LOADSESSION_TEST_RESULTS.md  PHASE_4_SESSION_MANAGEMENT_ISSUES.md  SESSION_CHANGES_DOCUMENTATION.md  SESSION_CHANGES_LOG.md  SESSION_COMPLETION_FINAL.md  SESSION_SUMMARY.md
docs/platform_tools/: formatall.md  saveandpush.md  savesession.md  todo-status.md
docs/processes/: BIN_DIRECTORY_REORGANIZATION.md  CHANGELOG_GENERATION.md  CHANGELOG_MANAGEMENT.md  GIT_COMMIT_DOCUMENTATION.md
docs/session_templates/: emergency_recovery_template.md  phase_work_template.md
docs/strategic/: PROJECT_CONTEXT.md  WHERE_WE_ARE.md
docs/verification/: analyze_farm_tractor.py  analyze_test_suite.py  check_implement_position.py  component_mapping.json  create_library_inventory.py  create_test_mapping.py  farm_tractor_complete_verification.py  farm_tractor_final_conclusion.py  farm_tractor_verification_summary.py  final_integration_test.py  generate_verification_report.py  investigate_farm_tractor.py  library_inventory.md  library_verification_summary.md  (+23 more)
examples/: ai_integration_example.py
monitoring/: sensor_interface.py
scripts/: benchmark_async_database.py  demo_async_database_improvements.py  generate_todos_schema.py  migrate_to_async_database.py  verify_async_components.py
tests/: test_can_communication.py  test_flexible_entry_points.py  test_portable_can_communication.py  test_todowrite_flexible_hierarchy.py  test_token_usage_temp.db-shm
tmp_scripts/: fix_todos_duplicates.py
tools/: doc_update_reminder.sh  migrate_todowrite.py  tw_lint_soc.py  tw_stub_command.py  tw_trace.py  tw_validate.py
(+101 files in other folders)
