[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "afs_fastapi"
dynamic = ["version"]
description = "Automated Farming System API (FastAPI)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "D Deryl Downey", email = "dderyl@cyberspacetechgroup.com" } # optional
]
keywords = ["fastapi", "automation", "agriculture", "ml", "robotics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

# Runtime deps (kept lean; dev/test go under optional-dependencies)
dependencies = [
  "fastapi>=0.111",          # FastAPI (Pydantic v2)
  "uvicorn[standard]>=0.30", # ASGI server
  "starlette>=0.46",         # FastAPI's ASGI toolkit
  "pydantic>=2.7",           # Models/validation
  "python-can",              # CAN bus communication
  "httpx",                   # HTTP client for CRDT communication
  "tenacity",                # Retry mechanism for reliable messaging
  "pybreaker",               # Circuit breaker for network resilience
  "SQLAlchemy>=2.0",         # SQLAlchemy ORM
  "psycopg2-binary>=2.9",    # PostgreSQL adapter
  "alembic>=1.13",           # Database migrations
  "todowrite>=0.1.0",       # Standalone task management system
  # add any concrete libs you use at runtime (DB client, sensors, etc.)

]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-xdist>=3.5",        # Parallel testing for performance
  "pytest-mock>=3.14",       # Mock utilities
  "pytest-timeout>=2.4",     # Test timeout management
  "httpx>=0.27",
  "pyright>=1.1",
  "ruff>=0.5",
  "black>=24.0",
  "markdown-it-py>=3.0",      # Tier 1: CommonMark-compliant markdown parser
  "mdit-py-plugins>=0.4",     # GFM extensions for markdown-it-py
  "markdown2>=2.4",           # Tier 2: Fallback markdown parser with extras
  "markdown>=3.5",            # Tier 3: Python-Markdown final fallback
  "types-setuptools",         # example type stubs; trim as needed
  "types-Markdown",           # stubs for docs/convert_readme_to_index_html.py
]

[project.scripts]
afs-api = "afs_fastapi.__main__:main"

[project.urls]
Homepage = "https://github.com/dderyldowney/afs_fastapi"
Issues = "https://github.com/dderyldowney/afs_fastapi/issues"

# ---------------------------
# Tooling: make everything 3.12
# ---------------------------

[tool.ruff]
# Ruff will infer from [project].requires-python, but we pin explicitly for clarity.
target-version = "py312"
line-length = 100
# Enable Ruff lints that complement PyRight without being noisy.
lint.select = ["E", "F", "UP", "B"]
lint.ignore = [
  "E501",  # line length handled by formatter
]
src = ["afs_fastapi", "tests"]
exclude = ["bin", "afs_fastapi/__main__.py"]


[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"
exclude = '''
(/ 
    \.git
  | \.venv
  | \.claude
  | __pycache__
  | build
  | dist
  | bin
)/ 
'''

[tool.pyright]
# Enhanced pyright configuration with maximum error detection
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryEllipsis = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "error"
reportUnsupportedDunderAll = "error"
reportPrivateImportUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportUnreachable = "error"
reportPossiblyUnboundVariable = "error"
reportPossiblyUndefinedVariable = "error"
reportMissingModuleSource = "error"
reportInvalidTypeForm = "error"
reportPropertyTypeMismatch = "error"
reportUnsupportedOperandType = "error"
reportArgumentType = "error"
reportAssignmentType = "error"
reportReturnType = "error"
reportOperatorIssue = "error"
reportUnnecessaryTypeIgnoreComment = "error"

# Virtual environment configuration
virtualenvPath = "."
virtualenv = ".venv"
stubPath = "typings"


[tool.coverage.run]
branch = true
source = ["afs_fastapi"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
# Use Black-compatible profile so isort doesn't conflict with Black's import formatting
profile = "black"
line_length = 100
known_first_party = ["afs_fastapi"]
src_paths = ["afs_fastapi", "tests"]
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.pytest.ini_options]
# Performance optimization
addopts = [
    "-x",                    # Stop on first failure
    "--strict-markers",       # Markers must be defined
    "--strict-config",        # Config must be explicitly defined
    "--tb=short",            # Short traceback format
    "-v",                    # Verbose output
    "--asyncio-mode=auto",   # Auto-detect async mode
]
# Parallel testing configuration
# Enable with: pytest -n auto or pytest -n 4
# testpaths = ["tests"]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]

# Async testing configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Warning control
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "error::ResourceWarning",
    "ignore::pytest_asyncio.PytestUnhandledAsyncioWarning",
]

# Test timeout settings
timeout = 30

[tool.hatch.build]
exclude = [
  ".trunk",
]

[tool.hatch.version]
path = "afs_fastapi/version.py"

[tool.hatch.metadata]
allow-direct-references = true
